# 20230503-axum-mysql

./: .env  Cargo.toml  Makefile  Note - Sample.postman_collection.json  README.md  docker-compose.yaml
migrations/: 20230503_init.up.sql
src/: handler.rs  main.rs  model.rs  route.rs
